<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/general_view"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DesignFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/mplus"
        android:padding="10dp"
        android:text="@string/design"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:layout_height="60dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="match_parent"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:layout_height="60dp"
        android:hint="@string/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:hint="@string/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastname" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_mail" />

    <EditText
        android:id="@+id/editText_company"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:hint="@string/company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

    <EditText
        android:id="@+id/editText_job"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:hint="@string/job_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_company" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>